; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_channels.c_channel_disable_admin.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_channels.c_channel_disable_admin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssh = type { i32 }

@FORWARD_ADM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @channel_disable_admin(%struct.ssh* %0, i32 %1) #0 {
  %3 = alloca %struct.ssh*, align 8
  %4 = alloca i32, align 4
  store %struct.ssh* %0, %struct.ssh** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ssh*, %struct.ssh** %3, align 8
  %6 = load i32, i32* @FORWARD_ADM, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @channel_clear_permission(%struct.ssh* %5, i32 %6, i32 %7)
  %9 = load %struct.ssh*, %struct.ssh** %3, align 8
  %10 = load i32, i32* @FORWARD_ADM, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @permission_set_add(%struct.ssh* %9, i32 %10, i32 %11, i32* null, i32 0, i32* null, i32* null, i32 0, i32* null)
  ret void
}

declare dso_local i32 @channel_clear_permission(%struct.ssh*, i32, i32) #1

declare dso_local i32 @permission_set_add(%struct.ssh*, i32, i32, i32*, i32, i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
